Enhance history page styles: add history description styles for improved layout and readability; update paths for CSS and images to ensure correct loading

--- a/docs/css/history.scss
+++ b/docs/css/history.scss
@@ -384,6 +384,11 @@ footer {
     margin: 0 10px 10px 10px !important;
   }
 
+  .history-desc {
+    padding: 30px 20px 30px 20px !important;
+    font-size: 1em !important;
+  }
+
   // .history-content{
   //   flex-direction: column !important;
   // }
